Generate event listeners as hidden classes