@@ -24,8 +24,6 @@
  */
 package org.spongepowered.vanilla.launch.event;
 
-import static com.google.common.base.Preconditions.checkArgument;
-import static com.google.common.base.Preconditions.checkNotNull;
 import static org.objectweb.asm.Opcodes.AALOAD;
 import static org.objectweb.asm.Opcodes.ACC_FINAL;
 import static org.objectweb.asm.Opcodes.ACC_PRIVATE;
@@ -46,7 +44,7 @@ import static org.objectweb.asm.Opcodes.INVOKEVIRTUAL;
 import static org.objectweb.asm.Opcodes.NEW;
 import static org.objectweb.asm.Opcodes.PUTSTATIC;
 import static org.objectweb.asm.Opcodes.RETURN;
-import static org.objectweb.asm.Opcodes.V1_6;
+import static org.objectweb.asm.Opcodes.V11;
 
 import com.github.benmanes.caffeine.cache.Caffeine;
 import com.github.benmanes.caffeine.cache.LoadingCache;
@@ -58,90 +56,90 @@ import org.objectweb.asm.Type;
 import org.spongepowered.api.event.Event;
 import org.spongepowered.common.event.filter.EventFilter;
 import org.spongepowered.common.event.filter.FilterFactory;
-import org.spongepowered.common.event.gen.DefineableClassLoader;
 import org.spongepowered.common.event.gen.LoaderClassWriter;
 import org.spongepowered.common.util.generator.GeneratorUtils;
 
+import java.lang.invoke.MethodHandles;
+import java.lang.invoke.MethodType;
 import java.lang.reflect.Method;
+import java.util.Objects;
 import java.util.concurrent.atomic.AtomicInteger;
 
 public final class ClassEventListenerFactory implements AnnotatedEventListener.Factory {
 
     private final AtomicInteger id = new AtomicInteger();
-    private final DefineableClassLoader classLoader;
-    private final LoadingCache<Method, Class<? extends AnnotatedEventListener>> cache = Caffeine.newBuilder()
+    private final MethodHandles.Lookup lookup;
+    private final LoadingCache<Method, MethodHandles.Lookup> cache = Caffeine.newBuilder()
         .weakValues().build(this::createClass);
-    private FilterFactory filterFactory;
+    private final FilterFactory filterFactory;
 
-    private final String targetPackage;
-
-    public ClassEventListenerFactory(String targetPackage, FilterFactory factory, DefineableClassLoader classLoader) {
-        checkNotNull(targetPackage, "targetPackage");
-        checkArgument(!targetPackage.isEmpty(), "targetPackage cannot be empty");
-        this.targetPackage = targetPackage + '.';
-        this.filterFactory = checkNotNull(factory, "filterFactory");
-        this.classLoader = checkNotNull(classLoader, "classLoader");
+    public ClassEventListenerFactory(final FilterFactory factory, final MethodHandles.Lookup lookup) {
+        this.filterFactory = Objects.requireNonNull(factory, "filterFactory");
+        this.lookup = Objects.requireNonNull(lookup, "classLoader");
     }
 
     @Override
-    public AnnotatedEventListener create(Object handle, Method method) throws Exception {
-        return this.cache.get(method)
-                .getConstructor(method.getDeclaringClass())
-                .newInstance(handle);
+    public AnnotatedEventListener create(final Object handle, final Method method) throws Throwable {
+        final MethodHandles.Lookup lookup = this.cache.get(method);
+        return (AnnotatedEventListener) lookup.findConstructor(
+            lookup.lookupClass(),
+            MethodType.methodType(void.class, method.getDeclaringClass())
+        ).invoke(handle);
     }
 
-    Class<? extends AnnotatedEventListener> createClass(Method method) throws Exception {
-        Class<?> handle = method.getDeclaringClass();
-        Class<?> eventClass = method.getParameterTypes()[0];
-        String name = this.targetPackage + eventClass.getSimpleName() + "Listener_" + handle.getSimpleName() + '_' + method.getName()
+    MethodHandles.Lookup createClass(final Method method) throws Exception {
+        final Class<?> handle = method.getDeclaringClass();
+        final Class<?> eventClass = method.getParameterTypes()[0];
+        final String listenerName = "Listener_" + handle.getSimpleName() + '_' + method.getName()
                 + this.id.incrementAndGet();
-        Class<? extends EventFilter> filter = this.filterFactory.createFilter(method);
+        final MethodHandles.Lookup lookup = MethodHandles.privateLookupIn(handle, this.lookup);
+        final Class<? extends EventFilter> filter = this.filterFactory.createFilter(method);
 
         if (filter == null && method.getParameterCount() != 1) {
             // basic sanity check
             throw new IllegalStateException("Failed to generate EventFilter for non trivial filtering operation.");
         }
         if (filter != null) {
-            filter.newInstance();
-            return this.classLoader.defineClass(name, ClassEventListenerFactory.generateClass(name, handle, method, eventClass, filter));
+            final MethodHandles.Lookup clazz = lookup.defineHiddenClass(
+                ClassEventListenerFactory.generateFilteredClass(listenerName, handle, method, eventClass),
+                true,
+                MethodHandles.Lookup.ClassOption.NESTMATE
+            );
+            final EventFilter filterInstance = filter.getConstructor().newInstance();
+            clazz.findStaticVarHandle(clazz.lookupClass(), "FILTER", EventFilter.class)
+                .set(filterInstance);
+            return clazz;
         }
-        return this.classLoader.defineClass(name, ClassEventListenerFactory.generateClass(name, handle, method, eventClass));
+        return lookup.defineHiddenClass(
+            ClassEventListenerFactory.generateClass(listenerName, handle, method, eventClass),
+            true,
+            MethodHandles.Lookup.ClassOption.NESTMATE
+        );
     }
 
     private static final String BASE_HANDLER = Type.getInternalName(AnnotatedEventListener.class);
     private static final String HANDLE_METHOD_DESCRIPTOR = '(' + Type.getDescriptor(Event.class) + ")V";
     private static final String FILTER_DESCRIPTOR = "(" + Type.getDescriptor(Event.class) + ")[Ljava/lang/Object;";
 
-    private static byte[] generateClass(String name, Class<?> handle, Method method, Class<?> eventClass, Class<? extends EventFilter> filter) {
-        name = name.replace('.', '/');
+    // generates a class -- the FILTER field must be set to the event filter class
+    private static byte[] generateFilteredClass(final String listenerName, final Class<?> handle, final Method method, final Class<?> eventClass) {
         final String handleName = Type.getInternalName(handle);
-        final String handleDescriptor = Type.getDescriptor(handle);
-        final String filterName = Type.getInternalName(filter);
-        String eventDescriptor = "(";
+        final String name = handleName + '_' + listenerName;
+        final String handleDescriptor = handle.descriptorString();
+        final StringBuilder eventDescriptor = new StringBuilder("(");
         for (int i = 0; i < method.getParameterCount(); i++) {
-            eventDescriptor += Type.getDescriptor(method.getParameterTypes()[i]);
+            eventDescriptor.append(Type.getDescriptor(method.getParameterTypes()[i]));
         }
-        eventDescriptor += ")V";
+        eventDescriptor.append(")V");
 
-        ClassWriter cw = new LoaderClassWriter(handle.getClassLoader(), ClassWriter.COMPUTE_FRAMES | ClassWriter.COMPUTE_MAXS);
+        final ClassWriter cw = new LoaderClassWriter(handle.getClassLoader(), ClassWriter.COMPUTE_FRAMES | ClassWriter.COMPUTE_MAXS);
         MethodVisitor mv;
-        FieldVisitor fv;
+        final FieldVisitor fv;
 
-        cw.visit(V1_6, ACC_PUBLIC + ACC_FINAL + ACC_SUPER, name, null, ClassEventListenerFactory.BASE_HANDLER, null);
+        cw.visit(V11, ACC_PUBLIC + ACC_FINAL + ACC_SUPER, name, null, ClassEventListenerFactory.BASE_HANDLER, null);
         {
-            fv = cw.visitField(ACC_PRIVATE + ACC_STATIC, "FILTER", "L" + filterName + ";", null, null);
+            fv = cw.visitField(ACC_PRIVATE + ACC_STATIC, "FILTER", EventFilter.class.descriptorString(), null, null);
             fv.visitEnd();
-        }
-        {
-            mv = cw.visitMethod(ACC_STATIC, "<clinit>", "()V", null, null);
-            mv.visitCode();
-            mv.visitTypeInsn(NEW, filterName);
-            mv.visitInsn(DUP);
-            mv.visitMethodInsn(INVOKESPECIAL, filterName, "<init>", "()V", false);
-            mv.visitFieldInsn(PUTSTATIC, name, "FILTER", "L" + filterName + ";");
-            mv.visitInsn(RETURN);
-            mv.visitMaxs(0, 0);
-            mv.visitEnd();
         }
         {
             mv = cw.visitMethod(ACC_PUBLIC, "<init>", '(' + handleDescriptor + ")V", null, null);
@@ -157,13 +155,13 @@ public final class ClassEventListenerFactory implements AnnotatedEventListener.F
             mv = cw.visitMethod(ACC_PUBLIC, "handle",
                 ClassEventListenerFactory.HANDLE_METHOD_DESCRIPTOR, null, new String[] { "java/lang/Exception" });
             mv.visitCode();
-            mv.visitFieldInsn(GETSTATIC, name, "FILTER", "L" + filterName + ";");
+            mv.visitFieldInsn(GETSTATIC, name, "FILTER", EventFilter.class.descriptorString());
             mv.visitVarInsn(ALOAD, 1);
             mv.visitMethodInsn(INVOKEINTERFACE, Type.getInternalName(EventFilter.class), "filter",
                 ClassEventListenerFactory.FILTER_DESCRIPTOR, true);
             mv.visitVarInsn(ASTORE, 2);
             mv.visitVarInsn(ALOAD, 2);
-            Label l2 = new Label();
+            final Label l2 = new Label();
             mv.visitJumpInsn(IFNULL, l2);
             mv.visitVarInsn(ALOAD, 0);
             mv.visitFieldInsn(GETFIELD, name, "handle", "Ljava/lang/Object;");
@@ -172,10 +170,10 @@ public final class ClassEventListenerFactory implements AnnotatedEventListener.F
                 mv.visitVarInsn(ALOAD, 2);
                 mv.visitIntInsn(BIPUSH, i);
                 mv.visitInsn(AALOAD);
-                Type paramType = Type.getType(method.getParameterTypes()[i]);
+                final Type paramType = Type.getType(method.getParameterTypes()[i]);
                 GeneratorUtils.visitUnboxingMethod(mv, paramType);
             }
-            mv.visitMethodInsn(INVOKEVIRTUAL, handleName, method.getName(), eventDescriptor, false);
+            mv.visitMethodInsn(INVOKEVIRTUAL, handleName, method.getName(), eventDescriptor.toString(), false);
             mv.visitLabel(l2);
             mv.visitInsn(RETURN);
             mv.visitMaxs(0, 0);
@@ -186,16 +184,16 @@ public final class ClassEventListenerFactory implements AnnotatedEventListener.F
         return cw.toByteArray();
     }
 
-    private static byte[] generateClass(String name, Class<?> handle, Method method, Class<?> eventClass) {
-        name = name.replace('.', '/');
+    private static byte[] generateClass(final String listenerName, final Class<?> handle, final Method method, final Class<?> eventClass) {
         final String handleName = Type.getInternalName(handle);
-        final String handleDescriptor = Type.getDescriptor(handle);
+        final String name = handleName + '_' + listenerName;
+        final String handleDescriptor = handle.descriptorString();
         final String eventName = Type.getInternalName(eventClass);
 
-        ClassWriter cw = new LoaderClassWriter(handle.getClassLoader(), ClassWriter.COMPUTE_FRAMES | ClassWriter.COMPUTE_MAXS);
+        final ClassWriter cw = new LoaderClassWriter(handle.getClassLoader(), ClassWriter.COMPUTE_FRAMES | ClassWriter.COMPUTE_MAXS);
         MethodVisitor mv;
 
-        cw.visit(V1_6, ACC_PUBLIC + ACC_FINAL + ACC_SUPER, name, null, ClassEventListenerFactory.BASE_HANDLER, null);
+        cw.visit(V11, ACC_PUBLIC + ACC_FINAL + ACC_SUPER, name, null, ClassEventListenerFactory.BASE_HANDLER, null);
 
         {
             mv = cw.visitMethod(ACC_PUBLIC, "<init>", '(' + handleDescriptor + ")V", null, null);
